--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       property="og:description"
       content="Generate custom color palettes using Ohuhu marker colors."
     />
-    <meta property="og:image" content="https://i.imgur.com/eIfvHeE.png" />
+    <meta property="og:image" content="https://imgur.com/9Yfhmk5" />
     <meta
       property="og:url"
       content="https://github.com/MysticSparkleWings/OhuhuPaletteGenerator"
