--- a/index.html
+++ b/index.html
@@ -183,21 +183,32 @@
       </p>
 
       <p class="info-paragraph" style="font-size: 14px">
-        This generator was hastily assembled by MysticSparkleWings and is not
-        officially affiliated with Ohuhu. If you'd like to support Mystic or say
-        thanks, please consider donating to her Ko-fi Page by either visiting
+        This generator was assembled by MysticSparkleWings and is not officially
+        affiliated with Ohuhu. If you'd like to support Mystic or say thanks,
+        please consider donating to her Ko-fi Page by either visiting
         <a href="https://ko-fi.com/mysticsparklewings" target="_blank"
           >this link</a
         >
         or by using the widget below.
       </p>
       <p class="info-paragraph" style="font-size: 14px">
-        If you'd like to provide assistance to make the generator better because
-        you probably understand how to code things way better than she does,
-        feel free to contact her either on Ko-fi or through
-        <a href="https://linktr.ee/mysticsparklewings" target="_blank"
-          >another social site</a
-        >.
+        <b>UPDATE! 3/20/25:</b>
+      </p>
+      Mystic's Reddit Account was recently suspended in error and it is unknown
+      if or when the account will be able to be recovered. As a result, she is
+      unable to help/answer Ohuhu-related questions there and all of her
+      previous posts/comments doing so are completely invisible.
+      <p></p>
+      If you'd like to pick Mystic's brain about Ohuhu markers/sets directly,
+      please contact her through
+      <a href="https://linktr.ee/mysticsparklewings" target="_blank"
+        >another social site</a
+      >.
+      <p>
+        If you know of some way to get in touch with Reddit Admins and/or get
+        her account restored faster beyond submitting daily appeals/emails,
+        please either do what you can or let her know through one of the linked
+        other social sites.
       </p>
     </div>
 
