--- a/index.html
+++ b/index.html
@@ -32,13 +32,17 @@
       content="https://github.com/MysticSparkleWings/OhuhuPaletteGenerator"
     />
 
-    <!-- HTML Page Design Stuff -->
-    <title>Ohuhu Palette Generator</title>
+    <!-- Title & Page Design Stuff -->
+<div class="title-wrapper">
+  <h1 id="site-title">Ohuhu Palette Generator</h1>
+  <span class="original-tag"><i>The Original</i></span>
+</div>
     <style>
       body {
         font-family: Verdana, sans-serif;
         margin: 20px;
         text-align: center;
+        padding-top: 15px;
       }
 
       .palette-Display {
@@ -148,8 +152,7 @@
     </style>
   </head>
   <body>
-    <!-- Title and Intro -->
-    <h1>Ohuhu Palette Generator</h1>
+    <!-- Intro -->
     <p class="info-paragraph" style="font-size: 14px">
       Looking for color inspiration or a palette for your next Ohuhu marker
       project? Click one of the buttons to generate a random palette of 3-8
@@ -243,7 +246,7 @@
         or by using the widget below.
       </p>
       <p class="info-paragraph" style="font-size: 14px">
-        <b>UPDATE! 07/08/25:</b>
+        <b>UPDATE! 07/28/25:</b>
       </p>
       <b>1.</b> Please refer to  <a href="https://ohuhu.com/pages/faq" target="_blank"
         >Ohuhu's FAQ Page</a
@@ -259,9 +262,7 @@
         >another social site</a
       >.
       <p>
-        <b>2.</b> Mystic has tried all ways she can think of to contact Reddit to get her still-wrongly-suspended account back with NO response. If you have any reliable information on how to get in touch with Reddit and/or recover a suspended Reddit account, please contact Mystic through <a href="https://linktr.ee/mysticsparklewings" target="_blank"
-        >another social site</a
-      >. 
+        <b>2.</b> Mystic's wrongful suspension from Reddit is officially OVER thanks to the help of <a href="https://linktr.ee/homeofstudiobee" target="_blank"> Studio Bee</a>! Which means Mystic will be able to resume paricipating in the Ohuhu Community there! Stay tuned for a proper announcement of her Return to Reddit (via the social sites linked above) very soon! 💖
       </p>
     </div>
 
@@ -674,6 +675,31 @@ loadColorData();
       </iframe>
       <!-- Style Code -->
       <style>
+.title-wrapper {
+  position: relative;
+  display: inline-block;
+  margin-top: 20px;
+}
+
+#site-title {
+  margin: 0;
+  text-align: center;
+}
+
+.original-tag {
+  position: absolute;
+  top: -35px;
+  left: -85px;
+  background: #a4f6c5;
+  color: black;
+  font-size: 1.3em;
+  font-weight: bold;
+  padding: 3px 9px;
+  border-radius: 10px;
+  transform: rotate(-5deg);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+}
+        
         .info-paragraph {
           max-width: 70%;
           margin: 20px auto;
