--- a/index.html
+++ b/index.html
@@ -245,10 +245,12 @@
         >
         or by using the widget below.
       </p>
+      <p class="info-paragraph" style="font-size: 14px">Please note that unlike some palette generators, this generator is HAND-CODED and does NOT utilize AI or an AI Website Builder, and pledges to remain AI-Free for now and forever.  
+      </p>
       <p class="info-paragraph" style="font-size: 14px">
         <b>UPDATE! 07/28/25:</b>
       </p>
-      <b>1.</b> Please refer to  <a href="https://ohuhu.com/pages/faq" target="_blank"
+      Please refer to  <a href="https://ohuhu.com/pages/faq" target="_blank"
         >Ohuhu's FAQ Page</a
       > about the New Name/Number System that will apply to all of the above marker lines and feel free to double-check any code conversions using either  <a href="https://ohuhu.com/pages/color-codes-index" target="_blank"
         >Ohuhu's Color Index Tool</a
@@ -261,8 +263,6 @@
       <a href="https://linktr.ee/mysticsparklewings" target="_blank"
         >another social site</a
       >.
-      <p>
-        <b>2.</b> Mystic's wrongful suspension from Reddit is officially OVER thanks to the help of <a href="https://linktr.ee/homeofstudiobee" target="_blank"> Studio Bee</a>! Which means Mystic will be able to resume paricipating in the Ohuhu Community there! Stay tuned for a proper announcement of her Return to Reddit (via the social sites linked above) very soon! 💖
       </p>
     </div>
 
