--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       </p>
 
       <p class="info-paragraph" style="font-size: 14px">
-        This generator was assembled by MysticSparkleWings and is not officially
+        This generator was created by MysticSparkleWings and is not officially
         affiliated with Ohuhu. If you'd like to support Mystic or say thanks,
         please consider donating to her Ko-fi Page by either visiting
         <a href="https://ko-fi.com/mysticsparklewings" target="_blank"
