--- a/index.html
+++ b/index.html
@@ -678,26 +678,25 @@ loadColorData();
 .title-wrapper {
   position: relative;
   display: inline-block;
-  margin-top: 20px;
+  margin-top: 15px;
 }
 
 #site-title {
-  margin: 0;
-  text-align: center;
+  position: relative;
+  display: inline-block;
 }
 
 .original-tag {
   position: absolute;
-  top: -35px;
-  left: -85px;
+  left: -1.7em;   
+  top: -1.2em;   
+  padding: 0.2em 0.5em;
   background: #a4f6c5;
-  color: black;
-  font-size: 1.3em;
+  border-radius: 0.6em;
+  font-size: 1.1em;
   font-weight: bold;
-  padding: 3px 9px;
-  border-radius: 10px;
   transform: rotate(-5deg);
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
 }
         
         .info-paragraph {
